[package]
name = "twitter_request"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.MD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4", features = ["serde"] }
reqwest = { version="^0.11", features = ["json"] }
dotenv = "^0.15"
http = "^0.2"
thiserror = "1"

[dev-dependencies]
